--- a/Email_Front/src/index.html
+++ b/Email_Front/src/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body style="background-image: url(https://wallpaperaccess.com/full/34348.jpg);background-size: cover;">
+<body style="background-image: url(https://wallpaperaccess.com/full/3999733.jpg);background-size: cover;">
   <app-root></app-root>
 </body>
 </html>
